--- a/projeto Strata/style.css
+++ b/projeto Strata/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans', arial, helvetica, sans-serif;
     color: #666;
     line-height: 1.7;
 }
@@ -10,7 +10,6 @@ a{
     border-bottom: 1px dotted;
     color: #49bf9d;
 }
-
 a:hover{
     border-bottom-color: transparent;
 }
@@ -19,52 +18,59 @@ p{
     margin: 0 0 2em;
 }
 
+img{
+    max-width: 100%;
+}
+
 h1, h2, h3, h4, h5, h6{
     color: #787878;
     font-weight: normal;
-    margin:1em 0;
+    margin: 1em 0;
 }
 
 h1{
-    font-size: 36px; 
+    font-size: 36px;
 }
-
 h2{
-    font-size: 30px; 
+    font-size: 30px;
 }
-
 h3{
-    font-size: 26px; 
+    font-size: 26px;
 }
-
 h4{
-    font-size: 22px; 
+    font-size: 22px;
 }
-
 h5{
-    font-size: 18px; 
+    font-size: 18px;
 }
-
 h6{
-    font-size: 15px; 
+    font-size: 15px;
 }
 
 sub, sup{
     font-size: 12px;
 }
-
 blockquote{
     border-left: 5px solid #efefef;
     margin: 2em 0;
     padding: .5em 0 .5em 1.5em;
 }
 
+blockquote p{
+    margin-bottom:.5em;
+}
+
+blockquote p:last-child{
+    margin-bottom: 0;
+}
+
 code{
+    background: #f7f7f7;
     border-radius: .35em;
-    border: 2px solid #efefef;
+    border:2px solid #efefef;
     font-size: .9em;
     padding: 0.25em 0.65em;
-    font-family: 'Courier New', monospace;
+    font-family: "courier new", monospace;
     color: #929292;
 }
 
@@ -75,46 +81,81 @@ pre code{
 ul, ol{
     margin: 0;
     padding: 0;
-    list-style-position: 1.1em;
+    padding-left: 1.1em;
 }
 
 li{
     padding-left: .5em;
 }
 
+.hidden{
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    display: block;
+}
+
 .ul-alternate{
     list-style-type: none;
+    padding-left: 0; 
+}
+.ul-alternate li{
+    border-bottom: 2px solid #d8d8d8;
     padding-left: 0;
 }
-
-.ul-alternate li{
-    border-bottom: 2px solid #cfcfcf;
-}
-
 .ul-alternate li:last-child{
-    border: 0;
+   border: 0; 
 }
 
 .ul-icons{
     list-style-type: none;
     padding-left: 0; 
-
 }
-
 .ul-icons li{
-    display: inline-block;  
+    display: inline-block;
     font-size: 2em;
     color: #49bf9d;
 }
 
+input, label, textarea, select{
+    display: inline-block;
+    width: 100%;
+    box-sizing: border-box;
+}
+input, textarea, select{
+    background: #ccc;
+    padding: 15px;
+    border-radius: 5px;
+    border: 3px solid transparent;
+    margin-bottom: 15px;
+}
+input[type="radio"], input[type="checkbox"]{
+    width: auto;
+}
+input:focus, textarea:focus{
+    border: 3px solid #49bf9d;
+    outline: none;
+}
+textarea{
+    height: 10em;
+}
+
 .button-default{
     background-color: #49bf9d;
-    border: 2px solid #49bf9d;
+    border: 3px solid #49bf9d;
     color: white;
     padding: .75em 1.5em;
     border-radius: 5px;
     font-size: .8em;
     display: inline-block;
+    width: auto;
+    transition: all .5s;
+    cursor: pointer;
+}
+
+.button-default:hover{
+    background-color:#5ae7bf;
+    border-color: transparent;
 }
 
 .button-default-stroke{
@@ -123,13 +164,24 @@ li{
     color: inherit;
 }
 
+.button-default-stroke:hover{
+    color: #49bf9d;
+    border-color: #49bf9d;
+    background-color: white;
+}
 .button-default-small{
     font-size: .65em;
 }
-
+.button-default-big{
+    font-size: 1em;
+}
 .button-default-full{
     display: block;
     text-align: center;
+}
+
+.imagem-link{
+    border: 0;
 }
 
 .table{
@@ -138,46 +190,39 @@ li{
     border-collapse: collapse;
     text-align: left;
 }
-
 .table td{
     padding: .75em;
 }
-
 .table th{
+    background: #ccc;
     padding: .75em;
-    background: rgb(233, 231, 231);
 }
-
 .table tbody tr td{
-    border-bottom: 1px solid rgb(223, 220, 220);
+    border-bottom: 1px solid #ccc;
 }
-
 .table tbody tr:first-child td{
     border-top: 2px solid #666;
 }
-
 .table tbody tr:last-child td{
     border-bottom: 2px solid #666;
 }
 
 .table tbody tr:nth-child(even) td{
-    background-color: #f0f0f0;
+    background: #eee;
 }
 
-.table-alternate tbody td, .table-alternate tbody tr:first-child td
-.table-alternate tbody tr:last-child td{
+.table-alternate tbody td, .table-alternate tbody tr:first-child td, .table-alternate tbody tr:last-child td{
     border: 1px solid #ddd;
-
 }
 
 .main-header{
-    position:fixed;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100%;
     width: 35%;
-    padding: 124px 54px 72px 54px;
-    box-sizing: border-box;   
+    padding: 124px 54px 72px;
+    box-sizing: border-box;
     background-image: url(overlay.png), url(bg.jpg);
     background-position: left top;
     background-size: auto, cover;
@@ -188,20 +233,16 @@ li{
     font-size: 22px;
     line-height: 1.5;
     color: white;
-    color: rgba(255, 255, 255, .5);
     font-weight: normal;
+    color: rgba(255, 255, 255, .5);
 }
-
 .main-header-title strong{
     color: white;
     font-weight: normal;
-
 }
-
 .main-header-link{
     color: inherit;
 }
-
 .main-header-link:hover{
     color: #49bf9d;
 }
@@ -209,17 +250,122 @@ li{
 .main-content{
     width: 65%;
     margin-left: 35%;
-    padding: 124px 54px 72px 54px;
-    box-sizing: border-box;   
-    padding: 124px 54px 72px 54px;
-    box-sizing: border-box;   
+    padding: 124px 54px 72px;
+    box-sizing: border-box;
 }
 
+.main-header-link img{
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.recent-works-card img{
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.gallery-img img{
+    width: 100%;
+}
+
+.gallery-thumb img, .gallery-img img{
+    margin-bottom: 2%;
+    display: inline-block;
+    border-radius: 5px;   
+}
+
+footer{
+    display: block;
+}
+
+.main-footer{
+    position: fixed;
+    bottom: 0;
+    width: 35%;
+    left: 0;
+    padding: 0 54px 72px 0;
+    box-sizing: border-box;
+    text-align: right;
+}
+
+.main-footer ul{
+    list-style: none;
+    transition: color .4s linear;
+}
+
+.main-footer .icons a:hover{
+    color: #5ae7bf;
+}
+
+.icons li {
+    font-size: 1.5em;
+    display: inline;
+}
+.icons-header{
+    color: rgb(206, 206, 206);
+    border-bottom: none;
+}
+
+.copyright li{
+    display: inline-block;
+}
+
+/* Grid */
 .row{
     overflow: auto;
 }
-
 .col-2{
-    width: 50%;
+    width: 48.5%;
     float: left;
+}
+.col-2:first-child{
+    margin-right: 1.5%;
+}
+.col-2:last-child{
+    margin-left: 1.5%;
+}
+.col-2-3{
+    width: 66%;
+    float: left;
+}
+.col-1-3{
+    width: 32%;
+    float: left;
+}
+
+.col-1-3:nth-child(3n - 2){
+    margin-right: 2%;
+}
+
+.col-1-3:nth-child(3n){
+    margin-left: 2%;
+}
+
+.col-2-3 + .col-1-3, .col-1-3 + .col-2-3{
+    margin-left: 2%;
+}
+
+.main-lf{
+    width: 95%;
+}
+
+.main-lr .left img{
+    float: left;
+    border-radius: 8px;
+    padding-right: 10px;
+}
+
+.left p{
+    text-align: left;
+}
+
+
+.main-lr .right img{
+    float: right;
+    border-radius: 8px;
+    padding-left: 10px;
+}
+
+.right p{
+    text-align: right;
 }
